--- a/packages/@okta/i18n/src/properties/login.properties
+++ b/packages/@okta/i18n/src/properties/login.properties
@@ -58,6 +58,7 @@ error.username.required = Please enter a username
 error.password.required = Please enter a password
 error.mfa.required = The current sign on policy requires this client to redirect for re-authentication or MFA. Please contact your administrator.
 error.unsupported.response = There was an unsupported response from server.
+error.idx.unknown.error = An unknown error has occured. Try again or contact your admin for assistance.
 
 # ERROR MESSAGE OVERRIDES
 errors.E0000004 = Unable to sign in
